--- a/src/app/extracurriculars/extracurriculars.component.css
+++ b/src/app/extracurriculars/extracurriculars.component.css
@@ -8,3 +8,8 @@
     border-radius: 10px;
     width: 35em;
 }
+
+#msci-card {
+    height: 14em;
+    width: 35em;
+}
