--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,7 @@ body, html {
     justify-content: center;
     width: 100%;
     min-height: 30em;
-    padding-bottom: 10%;
+    padding-bottom: 8%;
 }
 
 .exp-card {
